--- a/bubblesort/Makefile
+++ b/bubblesort/Makefile
@@ -7,11 +7,9 @@ CILPATH=../../../../
 CFLAGS=-g -Wall
 LOADLIBES=-lm
 testName=bubblesort
-# TX=tx.dat
-# TY=ty.dat
 
-./a.out: $(testName).oc $(testName).c ../../common/util.c  ../utils.oc $(RUNTIME)
-	$(OBLIVCC) $(CFLAGS) -I . $(testName).oc $(testName).c ../../common/util.c ../utils.oc $(LOADLIBES)
+./a.out: $(testName).oc $(testName).c ../../common/util.c ../utils.c ../utils.oc $(RUNTIME)
+	$(OBLIVCC) $(CFLAGS) -I .  ../utils.c $(testName).oc $(testName).c  ../../common/util.c ../utils.oc $(LOADLIBES)
 
 clean:
 	rm -f a.out $(testName).oc.cil.i $(testName).oc.i $(testName).oc.cil.c
