--- a/dijkstra/Makefile
+++ b/dijkstra/Makefile
@@ -10,8 +10,8 @@ testName=dijkstra
 # TX=tx.dat
 # TY=ty.dat
 
-./a.out: $(testName).oc $(testName).c ../../common/util.c ../utils.oc $(RUNTIME)
-	$(OBLIVCC) $(CFLAGS) -I . $(testName).oc $(testName).c ../../common/util.c ../utils.oc $(LOADLIBES)
+./a.out: $(testName).oc $(testName).c ../../common/util.c ../utils.c ../utils.oc $(RUNTIME)
+	$(OBLIVCC) $(CFLAGS) -I .  ../utils.c $(testName).oc $(testName).c  ../../common/util.c ../utils.oc $(LOADLIBES)
 
 clean:
 	rm -f a.out $(testName).oc.cil.i $(testName).oc.i $(testName).oc.cil.c
